{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 197,
  "lineage": "bd004a88-0f7c-f0fb-6b93-290705dc0208",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:internet-gateway/igw-0ac8bfe462467d1f2",
            "id": "igw-0ac8bfe462467d1f2",
            "owner_id": "637423201723",
            "tags": {
              "Name": "tf_igw_test"
            },
            "tags_all": {
              "Name": "tf_igw_test"
            },
            "vpc_id": "vpc-02478c96751fb758f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:route-table/rtb-08e38d8c29ecdf74e",
            "id": "rtb-08e38d8c29ecdf74e",
            "owner_id": "637423201723",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac8bfe462467d1f2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_rt_test"
            },
            "tags_all": {
              "Name": "tf_rt_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-02478c96751fb758f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025f783fcdd719381",
            "route_table_id": "rtb-08e38d8c29ecdf74e",
            "subnet_id": "subnet-05639cad46ad67056"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_route_table.tf_rt",
            "module.vpc.aws_subnet.tf_subnet1",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b49721f7d2f8dffa",
            "route_table_id": "rtb-08e38d8c29ecdf74e",
            "subnet_id": "subnet-0e6dc2cb63756ffcb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_route_table.tf_rt",
            "module.vpc.aws_subnet.tf_subnet2",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group/sg-00d4b90d328f532ae",
            "description": "Allow ssh and http/s",
            "egress": [],
            "id": "sg-00d4b90d328f532ae",
            "ingress": [],
            "name": "eks_sg",
            "name_prefix": "",
            "owner_id": "637423201723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS_SG"
            },
            "tags_all": {
              "Name": "EKS_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02478c96751fb758f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:subnet/subnet-05639cad46ad67056",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05639cad46ad67056",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423201723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_subnet_test1"
            },
            "tags_all": {
              "Name": "tf_subnet_test1"
            },
            "vpc_id": "vpc-02478c96751fb758f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:subnet/subnet-0e6dc2cb63756ffcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6dc2cb63756ffcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423201723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_subnet_test2"
            },
            "tags_all": {
              "Name": "tf_subnet_test2"
            },
            "vpc_id": "vpc-02478c96751fb758f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:vpc/vpc-02478c96751fb758f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013f192dd5557d46b",
            "default_route_table_id": "rtb-06e4d1ac49cc0a179",
            "default_security_group_id": "sg-090795a49c6351632",
            "dhcp_options_id": "dopt-026e9c2f4e01a946d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02478c96751fb758f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e4d1ac49cc0a179",
            "owner_id": "637423201723",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tf_sgegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group-rule/sgr-0c4989ab3371bb24c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c4989ab3371bb24c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d4b90d328f532ae",
            "security_group_rule_id": "sgr-0c4989ab3371bb24c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks_sg",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf_sgingress1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group-rule/sgr-09045b869736523e6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09045b869736523e6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d4b90d328f532ae",
            "security_group_rule_id": "sgr-09045b869736523e6",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks_sg",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf_sgingress2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group-rule/sgr-0d216538ed700e66b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d216538ed700e66b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d4b90d328f532ae",
            "security_group_rule_id": "sgr-0d216538ed700e66b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks_sg",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf_sgingress3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group-rule/sgr-06ebd3275b5c78fa9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-06ebd3275b5c78fa9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d4b90d328f532ae",
            "security_group_rule_id": "sgr-06ebd3275b5c78fa9",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks_sg",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    }
  ]
}